--- a/apps/term/index_or.html
+++ b/apps/term/index_or.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" href="node_modules/@xterm/xterm/css/xterm.css" />
-    <script src="node_modules/@xterm/xterm/lib/xterm.js"></script>
-    <script src="node_modules/@xterm/addon-fit/lib/addon-fit.js"></script>
+    <link rel="stylesheet" href="js/term/xterm.css" />
+    <script src="js/term/xterm.js"></script>
+    <script src="js/term/addon-fit.js"></script>
 
     <link rel="stylesheet" href="css/crterm.css" />
 
